# PhotoLean

./: CHANGELOG.md  README.md  pyproject.toml
PhotoLean/: cli.py  config.py  daemon.py  file_handler.py  logger.py  optimizer.py
tests/: test_cli.py  test_config.py  test_daemon.py  test_file_handler.py  test_logger.py  test_optimizer.py  test_watcher.py
